<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/White"
    android:orientation="vertical"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
    app:behavior_hideable="true"
    app:behavior_skipCollapsed="true"
    app:behavior_peekHeight="0dp"
    android:clipToPadding="true"
    android:padding="5dp"
    android:id="@+id/ActivityPageNew_BottomSheet"
    tools:showIn="@layout/activity_main">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:paddingEnd="0dp"
                android:textSize="16sp"
                android:maxLines="1"
                android:autofillHints="@string/newactivity_title"
                android:hint="@string/newactivity_title"
                android:inputType="textShortMessage"
                android:id="@+id/ActivityPageNew_TitleText"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:paddingEnd="0dp"
                android:textSize="16sp"
                android:maxLines="1"
                android:autofillHints="@string/newactivity_description"
                android:hint="@string/newactivity_description"
                android:inputType="textShortMessage"
                android:id="@+id/ActivityPageNew_Description"/>
        </LinearLayout>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:gravity="top"
            android:background="?android:attr/selectableItemBackground"
            android:contentDescription="@string/friendnew_done"
            android:src="@drawable/ui_activity_done"
            android:id="@+id/ActivityPageNew_DoneButton"/>
    </LinearLayout>

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?android:attr/selectableItemBackground"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:drawableStart="@drawable/activity_calendar"
                android:drawablePadding="10dp"
                android:text="@string/newactivity_duration"
                android:id="@+id/ActivityPageNew_DurationButton"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?android:attr/selectableItemBackground"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:drawableStart="@drawable/activity_location"
                android:drawablePadding="10dp"
                android:text="@string/newactivity_location"
                android:id="@+id/ActivityPageNew_LocationButton"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?android:attr/selectableItemBackground"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:drawableStart="@drawable/activity_repeat"
                android:drawablePadding="10dp"
                android:text="@string/newactivity_repeat"
                android:enabled="false"
                android:id="@+id/ActivityPageNew_Repeat"/>
        </LinearLayout>
    </HorizontalScrollView>
</LinearLayout>