<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_margin="30dp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal">

        <NumberPicker
            android:id="@+id/NPD_NumberPicker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_gravity="center_vertical|center_horizontal"
            android:theme="@style/NumberPickerText"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/activitydetail_hours"
            android:textSize="22sp"
            android:layout_gravity="center_vertical"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_marginTop="50dp"
        android:layout_gravity="center_horizontal">

        <Button
            android:id="@+id/NPD_Cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:text="@string/activitydetail_cancel"
            android:textSize="20sp"
            android:padding="10dp"
            android:layout_weight="1.2"/>

        <Button
            android:id="@+id/NPD_Done"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:layout_marginStart="20dp"
            android:text="@string/activitydetail_done"
            android:textSize="20sp"
            android:padding="10dp"
            android:layout_weight="1"/>
    </LinearLayout>
</LinearLayout>