<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_vertical"
    android:visibility="gone"
    tools:showIn="@layout/auth_welcome">

    <!-- Email & Password -->
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/auth_buttonStartEndPadding"
        android:layout_marginEnd="@dimen/auth_buttonStartEndPadding"
        android:inputType="textEmailAddress"
        android:hint="@string/auth_email"
        android:autofillHints="@string/auth_email"
        android:textColorHint="@color/lightGrey"
        android:textColor="@color/lightGrey"

        android:drawableStart="@drawable/auth_email"
        android:drawablePadding="5dp"
        android:drawableTint="@color/lightGrey"
        android:backgroundTint="@color/lightGrey"
        android:maxLines="1"
        android:id="@+id/auth_login_emailEditText"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/auth_buttonBetweenPadding"
        android:layout_marginStart="@dimen/auth_buttonStartEndPadding"
        android:layout_marginEnd="@dimen/auth_buttonStartEndPadding"
        android:inputType="textPassword"
        android:hint="@string/auth_password"
        android:autofillHints="@string/auth_password"
        android:textColorHint="@color/lightGrey"
        android:textColor="@color/lightGrey"

        android:drawableStart="@drawable/auth_password"
        android:drawablePadding="5dp"
        android:drawableTint="@color/lightGrey"
        android:backgroundTint="@color/lightGrey"
        android:maxLines="1"
        android:id="@+id/auth_login_passwordEditText"/>

    <!-- Remember Me & Forgot Password Button -->
    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/auth_buttonBetweenPadding"
        android:layout_marginStart="@dimen/auth_buttonStartEndPadding"
        android:layout_marginEnd="@dimen/auth_buttonStartEndPadding">

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/auth_rememberMe"
            android:textStyle="normal"
            android:layout_gravity="center|start"
            android:textColor="@color/lightGrey"
            android:buttonTint="@color/lightGrey"
            android:id="@+id/auth_login_rememberme"/>

        <!--<TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center|end"
            android:text="@string/auth_forgotPassword"
            android:textColor="@color/lightGrey"
            android:id="@+id/auth_login_forgotPassword"/>-->
    </GridLayout>

    <Button
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/auth_buttonBetweenPadding"
        android:layout_marginStart="@dimen/auth_buttonStartEndPadding"
        android:layout_marginEnd="@dimen/auth_buttonStartEndPadding"
        android:text="@string/auth_signin"
        android:textColor="@color/lightGrey"
        android:background="@drawable/auth_buttonborder"
        android:foreground="?android:attr/selectableItemBackground"
        android:onClick="onClick"
        android:id="@+id/auth_loginButton"/>

    <!-- OR -->
    <!--<RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/relLayout1"
        android:visibility="visible">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/auth_buttonBetweenPadding"
            android:layout_marginBottom="@dimen/auth_buttonBetweenPadding"
            android:text="@string/auth_or"
            android:layout_centerHorizontal="true"
            android:textColor="@color/lightGrey"/>
    </RelativeLayout>-->

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/auth_buttonBetweenPadding"
        android:layout_marginBottom="0dp"
        android:layout_marginStart="@dimen/auth_buttonStartEndPadding"
        android:layout_marginEnd="@dimen/auth_buttonStartEndPadding"
        android:text="@string/auth_forgotPassword"
        android:textColor="@color/lightGrey"
        android:id="@+id/auth_login_forgotPassword"
        android:background="?android:attr/selectableItemBackground"/>
</LinearLayout>